--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI 自动化服务 | 一人公司</title>
+  <title>Lever Lab | AI 自动化服务</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -38,17 +38,22 @@
     .glow { box-shadow: 0 0 40px rgba(0, 212, 170, 0.15); }
     .glow-sm { box-shadow: 0 0 20px rgba(0, 212, 170, 0.1); }
     .gradient-border { border: 1px solid rgba(0, 212, 170, 0.2); }
+    #contact-modal { display: none; }
+    #contact-modal.open { display: flex; }
   </style>
 </head>
 <body class="tech-bg text-gray-100 min-h-screen antialiased">
   <!-- 导航 -->
   <nav class="fixed top-0 left-0 right-0 z-50 bg-dark/80 backdrop-blur-md border-b border-border">
     <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
-      <a href="#" class="text-xl font-semibold text-accent">AI 自动化</a>
+      <a href="#" class="flex items-center gap-2">
+        <img src="logo.png" alt="Lever Lab" class="h-9 object-contain" />
+        <span class="text-xl font-semibold text-accent">Lever Lab</span>
+      </a>
       <div class="flex gap-8">
+        <a href="#about" class="text-gray-400 hover:text-accent transition">关于</a>
         <a href="#services" class="text-gray-400 hover:text-accent transition">服务</a>
         <a href="#cases" class="text-gray-400 hover:text-accent transition">案例</a>
-        <a href="#pricing" class="text-gray-400 hover:text-accent transition">价格</a>
         <a href="#contact" class="text-gray-400 hover:text-accent transition">联系</a>
       </div>
     </div>
@@ -57,15 +62,26 @@
   <!-- Hero -->
   <header class="pt-32 pb-20 px-6">
     <div class="max-w-4xl mx-auto text-center">
-      <p class="text-accent text-sm font-medium tracking-widest uppercase mb-4">一人公司 · 专注自动化</p>
+      <p class="text-accent text-sm font-medium tracking-widest uppercase mb-4">Lever Lab · 专注自动化</p>
       <h1 class="text-4xl md:text-5xl font-bold text-white mb-6 leading-tight">
         用 AI 与自动化<br />释放你的业务潜力
       </h1>
-      <p class="text-gray-400 text-lg max-w-2xl mx-auto">
+      <p class="text-gray-400 text-lg max-w-2xl mx-auto mb-8">
         定制化流程自动化、智能数据处理、集成与运维，让重复工作交给机器，让你专注创造。
       </p>
+      <a href="#services" class="inline-block px-6 py-2.5 rounded-lg border border-accent/50 text-accent font-medium hover:bg-accent/10 transition">了解服务与案例</a>
     </div>
   </header>
+
+  <!-- 关于 -->
+  <section id="about" class="py-16 px-6 bg-surface/20">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-2xl font-bold text-white mb-4">关于 Lever Lab</h2>
+      <p class="text-gray-400 leading-relaxed">
+        Lever Lab 专注用 AI 与自动化帮你省时间、提效率。从需求梳理、方案设计到开发上线与维护，一对一沟通，按需交付，无隐藏条款。
+      </p>
+    </div>
+  </section>
 
   <!-- 1. 服务介绍 -->
   <section id="services" class="py-20 px-6">
@@ -122,93 +138,129 @@
     </div>
   </section>
 
-  <!-- 3. 价格表 -->
-  <section id="pricing" class="py-20 px-6">
+  <!-- 合作流程 -->
+  <section id="process" class="py-20 px-6">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold text-white mb-4">价格表</h2>
-      <p class="text-gray-400 mb-12 max-w-2xl">按项目或按需报价，无隐藏费用。</p>
-      <div class="grid md:grid-cols-3 gap-6">
+      <h2 class="text-3xl font-bold text-white mb-4">合作流程</h2>
+      <p class="text-gray-400 mb-12 max-w-2xl">从沟通到交付，简单清晰。</p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
         <div class="bg-surface/80 rounded-xl p-6 gradient-border text-center">
-          <h3 class="text-lg font-semibold text-white mb-2">咨询与方案</h3>
-          <p class="text-3xl font-bold text-accent mb-1">¥999<span class="text-base font-normal text-gray-400">/次</span></p>
-          <p class="text-gray-400 text-sm mb-4">1–2 小时需求沟通与方案建议</p>
-          <ul class="text-gray-400 text-sm space-y-2 text-left">
-            <li>· 需求梳理与可行性评估</li>
-            <li>· 技术路线与工作量粗估</li>
-            <li>· 可延展为正式项目报价</li>
-          </ul>
-        </div>
-        <div class="bg-surface/80 rounded-xl p-6 gradient-border border-accent/50 glow text-center relative">
-          <span class="absolute -top-3 left-1/2 -translate-x-1/2 px-3 py-0.5 bg-accent text-dark text-xs font-medium rounded-full">推荐</span>
-          <h3 class="text-lg font-semibold text-white mb-2">标准项目</h3>
-          <p class="text-3xl font-bold text-accent mb-1">按项目</p>
-          <p class="text-gray-400 text-sm mb-4">根据需求与工期单独报价</p>
-          <ul class="text-gray-400 text-sm space-y-2 text-left">
-            <li>· 需求确认与排期</li>
-            <li>· 开发、联调与文档</li>
-            <li>· 1 个月免费问题修复</li>
-          </ul>
+          <span class="inline-flex w-10 h-10 rounded-full bg-accent/20 text-accent font-bold items-center justify-center mb-3">1</span>
+          <h3 class="text-white font-semibold mb-2">沟通需求</h3>
+          <p class="text-gray-400 text-sm">你描述场景与目标，我帮你梳理可行性与范围。</p>
         </div>
         <div class="bg-surface/80 rounded-xl p-6 gradient-border text-center">
-          <h3 class="text-lg font-semibold text-white mb-2">长期维护</h3>
-          <p class="text-3xl font-bold text-accent mb-1">¥2,999<span class="text-base font-normal text-gray-400">/月</span></p>
-          <p class="text-gray-400 text-sm mb-4">已有系统运维与小幅迭代</p>
-          <ul class="text-gray-400 text-sm space-y-2 text-left">
-            <li>· 监控与故障响应</li>
-            <li>· 小需求与优化</li>
-            <li>· 月度报告与建议</li>
-          </ul>
+          <span class="inline-flex w-10 h-10 rounded-full bg-accent/20 text-accent font-bold items-center justify-center mb-3">2</span>
+          <h3 class="text-white font-semibold mb-2">方案与报价</h3>
+          <p class="text-gray-400 text-sm">给出技术方案与工期、报价，确认后再开工。</p>
+        </div>
+        <div class="bg-surface/80 rounded-xl p-6 gradient-border text-center">
+          <span class="inline-flex w-10 h-10 rounded-full bg-accent/20 text-accent font-bold items-center justify-center mb-3">3</span>
+          <h3 class="text-white font-semibold mb-2">开发交付</h3>
+          <p class="text-gray-400 text-sm">按约定开发、联调与测试，交付可用的系统或脚本。</p>
+        </div>
+        <div class="bg-surface/80 rounded-xl p-6 gradient-border text-center">
+          <span class="inline-flex w-10 h-10 rounded-full bg-accent/20 text-accent font-bold items-center justify-center mb-3">4</span>
+          <h3 class="text-white font-semibold mb-2">维护支持</h3>
+          <p class="text-gray-400 text-sm">交付后可按需续约运维、小改与问题修复。</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- 4. 联系表单 -->
+  <!-- 3. 联系入口 -->
   <section id="contact" class="py-20 px-6 bg-surface/30">
-    <div class="max-w-2xl mx-auto">
+    <div class="max-w-2xl mx-auto text-center">
       <h2 class="text-3xl font-bold text-white mb-4">联系我</h2>
-      <p class="text-gray-400 mb-8">留下需求或问题，我会尽快回复。</p>
+      <p class="text-gray-400 mb-8">有需求或想聊聊方案？选一种方式即可。</p>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+        <button type="button" onclick="openChat()" class="px-8 py-3 rounded-lg bg-accent text-dark font-semibold hover:bg-accentDim transition">
+          实时对话
+        </button>
+        <button type="button" onclick="openFormModal()" class="px-8 py-3 rounded-lg bg-surface border border-border text-gray-200 font-semibold hover:border-accent hover:text-accent transition">
+          留言（填邮箱）
+        </button>
+      </div>
+      <p class="text-gray-500 text-sm mt-6">实时对话：立即在页面聊天；留言：填写称呼、邮箱和需求，我会通过邮件回复。</p>
+    </div>
+  </section>
+
+  <!-- 联系弹窗 -->
+  <div id="contact-modal" class="fixed inset-0 z-[100] items-center justify-center p-4 bg-black/70 backdrop-blur-sm" onclick="if(event.target===this) closeContactModal()">
+    <div class="bg-surface rounded-xl max-w-md w-full p-6 gradient-border shadow-xl relative" onclick="event.stopPropagation()">
+      <button type="button" onclick="closeContactModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white text-2xl leading-none" aria-label="关闭">&times;</button>
+      <h3 class="text-xl font-bold text-white mb-2">与我交流</h3>
+      <p class="text-gray-400 text-sm mb-6">留下您的称呼、邮箱和需求，我会尽快通过邮件回复。</p>
       <form class="space-y-4" action="#" method="post" id="contact-form">
         <div>
-          <label for="name" class="block text-sm font-medium text-gray-300 mb-1">姓名 / 称呼</label>
-          <input type="text" id="name" name="name" required
+          <label for="modal-name" class="block text-sm font-medium text-gray-300 mb-1">姓名 / 称呼</label>
+          <input type="text" id="modal-name" name="name" required
             class="w-full px-4 py-3 rounded-lg bg-dark border border-border text-white placeholder-gray-500 focus:outline-none focus:border-accent transition" placeholder="您的称呼" />
         </div>
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-300 mb-1">邮箱</label>
-          <input type="email" id="email" name="email" required
+          <label for="modal-email" class="block text-sm font-medium text-gray-300 mb-1">邮箱</label>
+          <input type="email" id="modal-email" name="email" required
             class="w-full px-4 py-3 rounded-lg bg-dark border border-border text-white placeholder-gray-500 focus:outline-none focus:border-accent transition" placeholder="your@email.com" />
         </div>
         <div>
-          <label for="message" class="block text-sm font-medium text-gray-300 mb-1">需求简述</label>
-          <textarea id="message" name="message" rows="4" required
+          <label for="modal-message" class="block text-sm font-medium text-gray-300 mb-1">需求简述</label>
+          <textarea id="modal-message" name="message" rows="4" required
             class="w-full px-4 py-3 rounded-lg bg-dark border border-border text-white placeholder-gray-500 focus:outline-none focus:border-accent transition resize-none" placeholder="简单描述您的场景或想自动化的流程..."></textarea>
         </div>
         <button type="submit" class="w-full py-3 px-6 rounded-lg bg-accent text-dark font-semibold hover:bg-accentDim transition">
           发送
         </button>
       </form>
-      <p class="text-gray-500 text-sm mt-4">提交后我将通过邮箱与您联系，不会用于其他用途。</p>
+      <p class="text-gray-500 text-xs mt-4">提交后仅用于回复您，不会外泄或另作他用。</p>
     </div>
-  </section>
+  </div>
 
   <!-- Footer -->
   <footer class="py-8 px-6 border-t border-border">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between gap-4">
-      <p class="text-gray-500 text-sm">© 2025 AI 自动化服务 · 一人公司</p>
+      <p class="text-gray-500 text-sm">© 2026 Lever Lab</p>
       <div class="flex gap-6">
+        <a href="#about" class="text-gray-500 hover:text-accent text-sm">关于</a>
         <a href="#services" class="text-gray-500 hover:text-accent text-sm">服务</a>
         <a href="#cases" class="text-gray-500 hover:text-accent text-sm">案例</a>
-        <a href="#pricing" class="text-gray-500 hover:text-accent text-sm">价格</a>
+        <a href="#process" class="text-gray-500 hover:text-accent text-sm">流程</a>
         <a href="#contact" class="text-gray-500 hover:text-accent text-sm">联系</a>
       </div>
     </div>
   </footer>
 
+  <!-- Tawk.to 实时对话 -->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function() {
+      var s1 = document.createElement('script'), s0 = document.getElementsByTagName('script')[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/69948b94d840b61c35c05202/1jhm42fvd';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+
   <script>
+    function openChat() {
+      if (typeof Tawk_API !== 'undefined' && Tawk_API.maximize) Tawk_API.maximize();
+    }
+    function openFormModal() {
+      document.getElementById('contact-modal').classList.add('open');
+      document.body.style.overflow = 'hidden';
+    }
+    function closeContactModal() {
+      document.getElementById('contact-modal').classList.remove('open');
+      document.body.style.overflow = '';
+    }
     document.getElementById('contact-form').addEventListener('submit', function(e) {
       e.preventDefault();
-      alert('感谢提交！我会尽快通过邮箱回复您。（当前为前端演示，未配置后端）');
+      alert('感谢提交！我会尽快通过邮箱回复您。（未配置表单后端时仅演示）');
+      closeContactModal();
+    });
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape') closeContactModal();
     });
   </script>
 </body>
